* Catch univention.lib.admember import error (Bug #34092)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52475 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.76-24) unstable; urgency=low
+
+  * Catch univention.lib.admember import error (Bug #34092)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 01 Aug 2014 13:49:25 +0200
+
 univention-directory-manager-modules (9.0.76-23) unstable; urgency=low
 
   * Depend on python-univention-lib (Bug #34092)
