--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-63) unstable; urgency=medium
+
+  * Bug #35090: text adaptations
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Aug 2014 13:54:52 +0200
+
 univention-ad-connector (8.0.17-62) unstable; urgency=medium
 
   Bug #35090:
