--- a/services/univention-ad-connector/umc/js/de.po
+++ b/services/univention-ad-connector/umc/js/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-adconnector\n"
 "Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: 2014-07-31 18:49+0200\n"
+"POT-Creation-Date: 2014-08-01 13:53+0200\n"
 "PO-Revision-Date: 2011-11-28 16:53+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -320,7 +320,7 @@ msgstr ""
 msgid "Password service"
 msgstr "Passwortdienst"
 
-#: umc/js/adconnector/SetupWizard.js:539
+#: umc/js/adconnector/SetupWizard.js:548
 msgid "Please confirm to carry out a restart of the UMC server components."
 msgstr "Bitte bestätigen Sie den Neustart der UMC-Server-Komponenten."
 
@@ -380,11 +380,12 @@ msgstr ""
 
 #: umc/js/adconnector/DownloadInfo.js:43
 msgid ""
-"The MSI files are the installation files for the password service and can be "
-"started by double clicking on it."
+"The MSI files are the installation files for the password service. The "
+"installation can be started on the Active Directory domain controller by "
+"double clicking on it."
 msgstr ""
-"Die MSI Dateien sind die Installationsdateien für den Passwort-Dienst und "
-"können per Doppelklick gestartet werden."
+"Die MSI Dateien sind die Installationsdateien für den Passwort-Dienst. "
+"Die Installation kann mit einem Doppelklick gestartet werden."
 
 #: umc/js/adconnector/SetupWizard.js:288
 msgid ""
