--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,19 @@
+univention-system-setup (7.0.69-45.1) unstable; urgency=medium
+
+  Bug #34484:
+  * Fixed a JavaScript error that broke the redirection with pre-configured
+    DHCP network settings that are left unchanged
+  * Fixed problems with clearing the software selection (which got reset when
+    entering the software page)
+  * Only skip locale page if pre-configured values for keyboard, time zone,
+    and default locale could be determined
+  * fixed handling of special characters for suggested domain name
+  * Only require the root password in the local wizard mode.
+  * Improved validation of domain name server.
+  * Various text improvements.
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Aug 2014 12:29:00 +0200
+
 univention-system-setup (7.0.69-45) unstable; urgency=low
 
   * Bug #34388: Updated links to appliance wizard
