--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,4 +1,10 @@
-univention-system-setup (7.0.69-45.1) unstable; urgency=medium
+univention-system-setup (7.0.69-47) unstable; urgency=medium
+
+  * Bug #34484: version bump
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Aug 2014 16:07:44 +0200
+
+univention-system-setup (7.0.69-46) unstable; urgency=medium
 
   Bug #34484:
   * Fixed a JavaScript error that broke the redirection with pre-configured
