added UCRV squid/forwardedfor (Bug #34025)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52483 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/debian/changelog
+++ b/services/univention-squid/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid (7.0.4-3) unstable; urgency=low
+
+  * added UCRV squid/forwardedfor (Bug #34025) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 01 Aug 2014 16:38:06 +0200
+
 univention-squid (7.0.4-2) unstable; urgency=low
 
   * added UCRV squid/forwardedfor (Bug #34025) 
