dont ask for join account in member mode (Bug #35446)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52491 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,9 @@
+univention-join (6.0.18-11) unstable; urgency=low
+
+  * dont ask for join account in member mode (Bug #35446) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 04 Aug 2014 11:52:49 +0200
+
 univention-join (6.0.18-10) unstable; urgency=low
 
   * small fix (Bug #35470) 
