* Set samba4/ignore/mixsetup=yes when coming from AD Member mode   (Bug #35346)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52496 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-40) unstable; urgency=medium
+
+  * Set samba4/ignore/mixsetup=yes when coming from AD Member mode
+    (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 04 Aug 2014 13:55:47 +0200
+
 univention-management-console-module-adtakeover (1.0.10-39) unstable; urgency=medium
 
   * No need to make a fuss about the first parts of the S4 Connector
