* Work around Bug #35561  (Bug #35346).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52517 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-42) unstable; urgency=medium
+
+  * Work around Bug #35561  (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Mon, 04 Aug 2014 18:00:52 +0200
+
 univention-management-console-module-adtakeover (1.0.10-41) unstable; urgency=medium
 
   * Check the return code of the initial run of 96univention-samba.inst
