* Bug #34484: Change default TLD to .intranet; wording
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52519 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-48) unstable; urgency=low
+
+  * Bug #34484: Change default TLD to .intranet; wording
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 05 Aug 2014 10:25:41 +0200
+
 univention-system-setup (7.0.69-47) unstable; urgency=medium
 
   * Bug #34484: version bump
