--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-49) unstable; urgency=low
+
+  * Bug #34484: Fixed required root password; wording
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 05 Aug 2014 11:53:15 +0200
+
 univention-system-setup (7.0.69-48) unstable; urgency=low
 
   * Bug #34484: Change default TLD to .intranet; wording
