* Bug #35565: commit installed apps files upon UCRV repository/app_center/installed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52521 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.51-25) unstable; urgency=low
+
+  * Bug #35565: commit installed apps files upon UCRV
+    repository/app_center/installed
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 05 Aug 2014 13:44:10 +0200
+
 univention-management-console-module-appcenter (3.0.51-24) unstable; urgency=low
 
   * Bug #35454: UCS in AD domains: Hide certain apps when in AD domain
