--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.42-2) unstable; urgency=low
+
+  * Bug #35508: increased required free disk space for update in preup.sh
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 05 Aug 2014 16:13:37 +0200
+
 univention-updater (9.0.42-1) unstable; urgency=low
 
   * Bug #35508: adjust postup/preup.sh
