* Add make_deleted_objects_readable_for_this_machine (Bug #35566)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52529 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-64) unstable; urgency=medium
+
+  * Add make_deleted_objects_readable_for_this_machine (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 17:40:22 +0200
+
 univention-ad-connector (8.0.17-63) unstable; urgency=medium
 
   * Bug #35090: text adaptations
