--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-65) unstable; urgency=medium
+
+  * Add dependency on currrent version of python-univention-lib (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 17:43:08 +0200
+
 univention-ad-connector (8.0.17-64) unstable; urgency=medium
 
   * Add make_deleted_objects_readable_for_this_machine (Bug #35566)
