* Fix log from make_deleted_objects_readable_for_this_machine (Bug #35566)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52531 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-63) unstable; urgency=medium
+
+  * Fix log from make_deleted_objects_readable_for_this_machine (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 18:27:18 +0200
+
 univention-lib (3.0.26-62) unstable; urgency=medium
 
   * Add make_deleted_objects_readable_for_this_machine (Bug #35566)
