* DSACL needs to be adjusted in a separate step after initalization   (Bug #35566)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52532 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-ad-connector (8.0.17-66) unstable; urgency=medium
+
+  * DSACL needs to be adjusted in a separate step after initalization
+    (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 18:28:36 +0200
+
 univention-ad-connector (8.0.17-65) unstable; urgency=medium
 
   * Add dependency on currrent version of python-univention-lib (Bug #35566)
