--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-67) unstable; urgency=medium
+
+  * Bugfixes for make_deleted_objects_readable_for_this_machine (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 19:04:46 +0200
+
 univention-ad-connector (8.0.17-66) unstable; urgency=medium
 
   * DSACL needs to be adjusted in a separate step after initalization
