--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-50) unstable; urgency=low
+
+  * Bug #34484: Fixed changing locale during session
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 05 Aug 2014 22:31:00 +0200
+
 univention-system-setup (7.0.69-49) unstable; urgency=low
 
   * Bug #34484: Fixed required root password; wording
