--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-68) unstable; urgency=medium
+
+  * Fix python syntax typo (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 10:25:55 +0200
+
 univention-ad-connector (8.0.17-67) unstable; urgency=medium
 
   * Bugfixes for make_deleted_objects_readable_for_this_machine (Bug #35566)
