added ldap/sasl/secprops/maxssf (Bug #35513)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52545 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.0-4) unstable; urgency=low
+
+  * added ldap/sasl/secprops/maxssf (Bug #35513)
+
+ -- Felix Botner <botner@univention.de>  Wed, 06 Aug 2014 10:58:48 +0200
+
 univention-ldap (11.0.0-3) unstable; urgency=low
 
   * fixed template (Bug #34994) 
