--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,40 @@
+univention-ad-connector (8.0.17-68) unstable; urgency=medium
+
+  * Fix python syntax typo (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 11:35:06 +0200
+
+univention-ad-connector (8.0.17-67) unstable; urgency=medium
+
+  * Bugfixes for make_deleted_objects_readable_for_this_machine (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 19:04:46 +0200
+
+univention-ad-connector (8.0.17-66) unstable; urgency=medium
+
+  * DSACL needs to be adjusted in a separate step after initalization
+    (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 18:28:36 +0200
+
+univention-ad-connector (8.0.17-65) unstable; urgency=medium
+
+  * Add dependency on currrent version of python-univention-lib (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 17:43:08 +0200
+
+univention-ad-connector (8.0.17-64) unstable; urgency=medium
+
+  * Add make_deleted_objects_readable_for_this_machine (Bug #35566)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 05 Aug 2014 17:40:22 +0200
+
+univention-ad-connector (8.0.17-63) unstable; urgency=medium
+
+  * Bug #35090: text adaptations
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 01 Aug 2014 13:54:52 +0200
+
 univention-ad-connector (8.0.17-62) unstable; urgency=medium
 
   Bug #35090:
