* dont ask for join account in member mode (Bug #35446)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52553 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,10 @@
+univention-join (6.0.18-11) unstable; urgency=low
+
+  [ Felix Botner ]
+  * dont ask for join account in member mode (Bug #35446) 
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 11:49:24 +0200
+
 univention-join (6.0.18-10) unstable; urgency=low
 
   * small fix (Bug #35470) 
