--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-24) unstable; urgency=low
+
+  [ Stefan Gohmann ]
+  * Catch univention.lib.admember import error (Bug #34092)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 12:04:32 +0200
+
 univention-directory-manager-modules (9.0.76-23) unstable; urgency=low
 
   * Depend on python-univention-lib (Bug #34092)
