--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,13 @@
+univention-management-console-module-appcenter (4.0.0-2) unstable; urgency=low
+
+  * Bug #35565: commit installed apps files upon UCRV
+    repository/app_center/installed
+  * Bug #35454: UCS in AD domains: Hide certain apps when in AD domain
+  * Bug #35453: UCS in AD domains: Show a warning to install password service
+    for certain apps when in AD domain
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 06 Aug 2014 13:14:47 +0200
+
 univention-management-console-module-appcenter (4.0.0-1) unstable; urgency=low
 
   * Bug #35145: Start UCS 4.0 development
