* Bug #34484: Merged from UCS 3.2-2
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52567 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.15-3) unstable; urgency=low
+
+  * Bug #34484: Merged from UCS 3.2-2
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 06 Aug 2014 13:31:40 +0200
+
 univention-system-setup (8.0.15-2) unstable; urgency=low
 
   * Bug #34388: Updated links to appliance wizard 
