--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-43) unstable; urgency=medium
+
+  * Fix two log messages for (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 14:55:23 +0200
+
 univention-management-console-module-adtakeover (1.0.10-42) unstable; urgency=medium
 
   * Work around Bug #35561  (Bug #35346).
