* Fix logic change introduced in last commit (Bug #34776)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52570 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-44) unstable; urgency=medium
+
+  * Fix logic change introduced in last commit (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 15:16:46 +0200
+
 univention-management-console-module-adtakeover (1.0.10-43) unstable; urgency=medium
 
   * Fix two log messages for (Bug #34776)
