* Cleanup conflicting GPO directories before the robocopy phase (Bug #34776)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52578 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-46) unstable; urgency=medium
+
+  * Cleanup conflicting GPO directories before the robocopy phase (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 16:58:40 +0200
+
 univention-management-console-module-adtakeover (1.0.10-45) unstable; urgency=medium
 
   * reduce and simplify the patch (Bug #34776)
