--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (1.0.0-7) unstable; urgency=low
+
+  * added create_ad_groups etc to lib (Bug #35096) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 06 Aug 2014 17:16:38 +0200
+
 ucs-windows-tools (1.0.0-6) unstable; urgency=low
 
   * added ucs-windows-promote-ad (Bug #35394)
