* Add log message (Bug #34776) * Catch a sqlite3 exception in case the S4 table is not yet created   (Bug #35346)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52581 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-adtakeover (1.0.10-47) unstable; urgency=medium
+
+  * Add log message (Bug #34776)
+  * Catch a sqlite3 exception in case the S4 table is not yet created
+    (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 17:36:33 +0200
+
 univention-management-console-module-adtakeover (1.0.10-46) unstable; urgency=medium
 
   * Cleanup conflicting GPO directories before the robocopy phase (Bug #34776)
