* Add log message (Bug #34776) * Catch a sqlite3 exception in case the S4 table is not yet created   (Bug #35346) * Cleanup conflicting GPO directories before the robocopy phase (Bug #34776) * reduce and simplify the patch (Bug #34776) * Fix logic change introduced in last commit (Bug #34776) * Fix two log messages for (Bug #34776) * Work around Bug #35561  (Bug #35346). * Check the return code of the initial run of 96univention-samba.inst   when coming from AD Member mode. Abort if it is not ok and take care   to keep the "AD Member" service signal in that case so the takeover   may be tried again later (Bug #35346). * Intially run 96univention-samba.inst and 97univention-s4-connector.inst   individually when coming from AD Member mode instead of calling a general   run-join-scripts. That should only be done in the end. * Set samba4/ignore/mixsetup=yes when coming from AD Member mode   (Bug #35346) * No need to make a fuss about the first parts of the S4 Connector   joinscript, we simply run it once before samba DC is initialized.   (Bug #35346). * Fix some comments (Bug #35346). * In AD Member mode we need to run the first parts of the S4 Connector   joinscript before starting and waiting for the sync. * In AD Member mode we should let the Samba4 joinscript run to the end   after the initial join (Bug #35346). * Don't run all remaining joinscripts during disable_admember_mode * Don't log the error messages of the initial ntacl sysvolreset (Bug #35346) * set_nameserver1_to_local_default_ip before robocopy and   perform reconfigure_nameserver_for_samba_backend later as usual. * Update translations (Bug #35346). * Set nameserver1 to config_registry.Interfaces().get_default_ip_address()   after initial domain join, instead of reverting to nameserver1/local,   which would be the wrong choice when coming from AD Member (Bug #35346). * perform a reset_sysvol_ntacls before robocopy, required when coming from   AD Member * call revert_connector_settings when coming from AD

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,8 +1,158 @@
 univention-management-console-module-adtakeover (2.0.0-1) unstable; urgency=low
 
+  [ Florian Best ]
   * Bug #35145: Start UCS 4.0 development
 
- -- Florian Best <best@univention.de>  Mon, 14 Jul 2014 10:32:00 +0200
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 18:13:54 +0200
+
+univention-management-console-module-adtakeover (1.0.10-47) unstable; urgency=medium
+
+  * Add log message (Bug #34776)
+  * Catch a sqlite3 exception in case the S4 table is not yet created
+    (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 17:36:33 +0200
+
+univention-management-console-module-adtakeover (1.0.10-46) unstable; urgency=medium
+
+  * Cleanup conflicting GPO directories before the robocopy phase (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 16:58:40 +0200
+
+univention-management-console-module-adtakeover (1.0.10-45) unstable; urgency=medium
+
+  * reduce and simplify the patch (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 15:40:00 +0200
+
+univention-management-console-module-adtakeover (1.0.10-44) unstable; urgency=medium
+
+  * Fix logic change introduced in last commit (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 15:16:46 +0200
+
+univention-management-console-module-adtakeover (1.0.10-43) unstable; urgency=medium
+
+  * Fix two log messages for (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 06 Aug 2014 14:55:23 +0200
+
+univention-management-console-module-adtakeover (1.0.10-42) unstable; urgency=medium
+
+  * Work around Bug #35561  (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Mon, 04 Aug 2014 18:00:52 +0200
+
+univention-management-console-module-adtakeover (1.0.10-41) unstable; urgency=medium
+
+  * Check the return code of the initial run of 96univention-samba.inst
+    when coming from AD Member mode. Abort if it is not ok and take care
+    to keep the "AD Member" service signal in that case so the takeover
+    may be tried again later (Bug #35346).
+  * Intially run 96univention-samba.inst and 97univention-s4-connector.inst
+    individually when coming from AD Member mode instead of calling a general
+    run-join-scripts. That should only be done in the end.
+
+ -- Arvid Requate <requate@univention.de>  Mon, 04 Aug 2014 14:55:05 +0200
+
+univention-management-console-module-adtakeover (1.0.10-40) unstable; urgency=medium
+
+  * Set samba4/ignore/mixsetup=yes when coming from AD Member mode
+    (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 04 Aug 2014 13:55:47 +0200
+
+univention-management-console-module-adtakeover (1.0.10-39) unstable; urgency=medium
+
+  * No need to make a fuss about the first parts of the S4 Connector
+    joinscript, we simply run it once before samba DC is initialized.
+    (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:39:41 +0200
+
+univention-management-console-module-adtakeover (1.0.10-38) unstable; urgency=medium
+
+  * Fix some comments (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:13:25 +0200
+
+univention-management-console-module-adtakeover (1.0.10-37) unstable; urgency=medium
+
+  * In AD Member mode we need to run the first parts of the S4 Connector
+    joinscript before starting and waiting for the sync.
+  * In AD Member mode we should let the Samba4 joinscript run to the end
+    after the initial join (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:02:25 +0200
+
+univention-management-console-module-adtakeover (1.0.10-36) unstable; urgency=medium
+
+  * Don't run all remaining joinscripts during disable_admember_mode
+  * Don't log the error messages of the initial ntacl sysvolreset (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 16:12:37 +0200
+
+univention-management-console-module-adtakeover (1.0.10-35) unstable; urgency=medium
+
+  * set_nameserver1_to_local_default_ip before robocopy and
+    perform reconfigure_nameserver_for_samba_backend later as usual.
+  * Update translations (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 15:13:57 +0200
+
+univention-management-console-module-adtakeover (1.0.10-34) unstable; urgency=medium
+
+  * Set nameserver1 to config_registry.Interfaces().get_default_ip_address()
+    after initial domain join, instead of reverting to nameserver1/local,
+    which would be the wrong choice when coming from AD Member (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 14:54:57 +0200
+
+univention-management-console-module-adtakeover (1.0.10-33) unstable; urgency=medium
+
+  * perform a reset_sysvol_ntacls before robocopy, required when coming from
+    AD Member
+  * call revert_connector_settings when coming from AD Member (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 14:41:13 +0200
+
+univention-management-console-module-adtakeover (1.0.10-32) unstable; urgency=medium
+
+  * Reconfigure the nameserver1 back to the local system before the robocopy.
+    This should remove a login delay in case of an UMC timeout (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 14:14:46 +0200
+
+univention-management-console-module-adtakeover (1.0.10-31) unstable; urgency=medium
+
+  * Fix Ldb connection check against a native AD failing with FQDN given
+  * Allow UDM modification of objects synchronized from AD (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 28 Jul 2014 14:33:36 +0200
+
+univention-management-console-module-adtakeover (1.0.10-30) unstable; urgency=medium
+
+  * Fix disable_admember_mode call (Bug #35346)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 28 Jul 2014 14:31:55 +0200
+
+univention-management-console-module-adtakeover (1.0.10-29) unstable; urgency=medium
+
+  * call univention.lib.admember.revert_ucr_settings (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Fri, 25 Jul 2014 10:33:54 +0200
+
+univention-management-console-module-adtakeover (1.0.10-28) unstable; urgency=medium
+
+  * run disable_admember_mode before joining the domain (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Thu, 24 Jul 2014 17:41:42 +0200
+
+univention-management-console-module-adtakeover (1.0.10-27) unstable; urgency=medium
+
+  * Move fix_gpo_container_names code to check_gpo_presence (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Jul 2014 16:16:04 +0200
 
 univention-management-console-module-adtakeover (1.0.10-26) unstable; urgency=medium
 
