--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (1.0.0-8) unstable; urgency=low
+
+  * added create_ad_groups etc to lib (Bug #35096) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 07 Aug 2014 15:16:56 +0200
+
 ucs-windows-tools (1.0.0-7) unstable; urgency=low
 
   * added create_ad_groups etc to lib (Bug #35096) 
