set default samba/role during update (Bug #35584)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52632 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.19-11) unstable; urgency=low
+
+  * set default samba/role during update (Bug #35584) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 08 Aug 2014 10:18:16 +0200
+
 univention-samba (8.0.19-10) unstable; urgency=low
 
   * added prechange to password change script to
