--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.166-65) unstable; urgency=low
+
+  * Bug #35584: added small test script that checks if samba/role is 
+    set correctly
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 08 Aug 2014 11:27:32 +0200
+
 ucs-test (4.0.166-64) unstable; urgency=low
 
   * 60_umc-system/31_umc-service-user-authentication: test the UMC user
